--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,25 @@
                     <li class="nav-item">
                         <a class="nav-link{% if current_menu is defined and current_menu == 'properties' %} active {% endif %}"  href="{{ path('property.index') }}">Acheter</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('registration') }}">S'inscrire</a>
+                    </li>
                 </ul>
+                    
+                {% if app.user %}
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a href="{{path('logout')}}" class="nav-link" style="text-decoration: none; color: white;">Se deconnecter</a>
+                        </li>
+                    </ul>
+                {% else %}
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a href="{{path('login')}}" class="nav-link" style="text-decoration: none; color: white;">Se connecter</a>
+                        </li>
+                    </ul>
+                {% endif %}
+                
             </div>
         </nav>
         {% block body %}{% endblock %}
