--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -20,10 +20,12 @@
 
             <div class="row">
                 <div class="col-md-8">
-                    {% if property.filename %}
-                        <img src="{{vich_uploader_asset(property, 'imageFile') | imagine_filter('medium')}}" alt="" class="card-img-top" style="width: 100%; height:auto;">
+                    {% if property.picture is empty %}
+                        <img src="{{ '/media/properties/empty.jpg' | imagine_filter('medium') }}" alt="card-img-top" style="width: 100%; height:auto;">
                     {% else %}
-                        <img src="{{'/images/properties/empty.jpg' | imagine_filter('medium')}}" alt="" class="card-img-top" style="width: 100%; height:auto;">
+                        {% for picture in property.pictures %}
+                            <img src="{{ vich_uploader_asset(picture, 'imageFile') | imagine_filter('medium') }}" alt="card-img-top" style="width: 100%; height:auto;">
+                        {% endfor %}
                     {% endif %}        
                 </div>
                 <div class="col-md-4">
